--- a/app/cart/page.module.scss
+++ b/app/cart/page.module.scss
@@ -272,6 +272,22 @@
   border-top: 1px solid var(--color-border);
 }
 
+.continueShopping {
+  text-align: center;
+  padding-top: 16px;
+}
+
+.continueLink {
+  color: var(--color-text-secondary);
+  font-size: 14px;
+  text-decoration: underline;
+  transition: color 0.2s;
+
+  &:hover {
+    color: var(--color-text);
+  }
+}
+
 @media (max-width: 768px) {
   .itemDetails {
     flex-direction: column;
