--- a/app/admin/leads/page.module.scss
+++ b/app/admin/leads/page.module.scss
@@ -79,6 +79,12 @@
   font-size: 0.8125rem;
 }
 
+.source {
+  color: #475569;
+  font-size: 0.8125rem;
+  font-weight: 500;
+}
+
 .message {
   max-width: 300px;
 }
