--- a/app/order/page.module.scss
+++ b/app/order/page.module.scss
@@ -1,12 +1,12 @@
 .page {
-  padding: 32px 0;
+  padding: 0;
   min-height: 60vh;
 }
 
 .title {
   font-size: 32px;
   font-weight: 700;
-  margin-bottom: 32px;
+  margin: 0 0 32px 0;
 }
 
 .content {
