Experimental changes - testing new features

--- a/components/organisms/ProductGrid/ProductGrid.module.scss
+++ b/components/organisms/ProductGrid/ProductGrid.module.scss
@@ -4,6 +4,12 @@
   gap: 24px;
 }
 
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .empty {
   text-align: center;
   padding: 64px;
