--- a/components/organisms/Header/Header.module.scss
+++ b/components/organisms/Header/Header.module.scss
@@ -224,7 +224,7 @@
 .logoText {
   font-size: 28px;
   font-weight: 700;
-  color: var(--color-primary-700);
+  color: var(--color-text);
   margin: 0;
   letter-spacing: -0.02em;
   
