--- a/app/stores/page.module.scss
+++ b/app/stores/page.module.scss
@@ -9,6 +9,10 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   gap: 32px;
+
+  &.gridFull {
+    grid-template-columns: 1fr;
+  }
 }
 
 .card {
